[tool.poetry]
name = "gas-coin-checker"
version = "0.1.0"
description = "See how much coin you would have if all your ETH gas bought coin."
authors = ["edwardp17"]

[tool.poetry.dependencies]
python = "^3.12"
ccxt = "^4.1.81"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true
